Fixed forms/input stylings, figured out .box gap issue

--- a/pikatsume/pikatsume/main_app/static/css/home.css
+++ b/pikatsume/pikatsume/main_app/static/css/home.css
@@ -22,6 +22,7 @@
     background: gold;
     margin: 5px 0;
     border: 3px solid #333;
+    border-radius: 10px;
     box-shadow: 3px 3px #777;
     background: rgba(255, 255, 255, 0.8);
 }
